# rustdesk-pro-server

./: Cargo.toml  audit.toml
.github/workflows/: build.yaml  commercial-build-deploy-ANALYSIS.md  commercial-build-deploy.yml  commercial-build.yml  commercial-cd.yml  commercial-ci.yml  commercial-security.yml
.github/workflows/docs/: README.md  WORKFLOWS_TECHNICAL_GUIDE.md  WORKFLOW_IMPLEMENTATION.md  WORKFLOW_OPERATIONS.md  WORKFLOW_USER_GUIDE.md
.trae/specs/github-action-guide/: GITHUB_ACTION_GUIDE.md
.trae/specs/workflow-compliance/: checklist.md  spec.md  tasks.md
commercial/: Cargo.toml
commercial/docker/: Dockerfile  Dockerfile.extended  Dockerfile.gha  Dockerfile.local  Dockerfile.s6
commercial/docker/rootfs/etc/s6-overlay/s6-rc.d/rustdesk-pro/: run
commercial/src/: cache.rs  lib.rs  main.rs  metrics.rs
commercial/src/audit/: errors.rs  logger.rs  mod.rs  models.rs
commercial/src/db/: mod.rs
commercial/src/device/: errors.rs  manager.rs  mod.rs  models.rs
commercial/src/license/: errors.rs  manager.rs  mod.rs  models.rs
commercial/src/user/: errors.rs  manager.rs  mod.rs  models.rs
commercial/src/web/: handlers.rs  middleware.rs  mod.rs  routes.rs
docs/: COMMERCIAL_USER_MANUAL.md  dockerfile-analysis.md
