[workspace]

[package]
name = "rustdesk-server-pro"
version = "1.0.0"
authors = ["RustDesk Team <info@rustdesk.com>"]
edition = "2021"
description = "RustDesk Server Commercial Edition - Enterprise Remote Control Solution"
license = "Proprietary"

[[bin]]
name = "rustdesk-pro"
path = "src/main.rs"

[dependencies]
# Common utilities from community edition
hbb_common = { path = "../libs/hbb_common" }

# Web framework
axum = { version = "0.7", features = ["http1", "http2", "query", "json"] }
headers = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "json"] }
deadpool = "0.12"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.16"

# Cryptography
sodiumoxide = "0.2"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
flexi_logger = { version = "0.29", features = ["async"] }
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Cross-origin resource sharing
tower-http = { version = "0.6", features = ["cors"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Base64 encoding
base64 = "0.22"

# Fix rustls-platform-verifier compatibility with newer rustls-webpki
rustls-platform-verifier = { git = "https://github.com/rustls/rustls-platform-verifier", branch = "main" }

[patch.crates-io]
rustls-platform-verifier = { git = "https://github.com/rustls/rustls-platform-verifier", branch = "main" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
mockall = "0.12"
